round corners of the UIImageViews

--- a/ToTheCornersSwift/Base.lproj/Main.storyboard
+++ b/ToTheCornersSwift/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,28 +17,60 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zR3-dG-EfV">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zR3-dG-EfV">
                                 <rect key="frame" x="16" y="28" width="50" height="50"/>
                                 <color key="backgroundColor" red="0.18431372940540314" green="0.94509810209274292" blue="0.23137256503105164" alpha="1" colorSpace="deviceRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="hmD-Mc-yL6"/>
+                                    <constraint firstAttribute="height" constant="50" id="p7U-Yc-Dir"/>
+                                </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="t69-KF-a8p">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="t69-KF-a8p">
                                 <rect key="frame" x="309" y="28" width="50" height="50"/>
                                 <color key="backgroundColor" red="0.9647059440612793" green="0.80784320831298828" blue="0.19607844948768616" alpha="1" colorSpace="deviceRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="9Ru-VT-wX9"/>
+                                    <constraint firstAttribute="width" constant="50" id="Pk8-SQ-ArP"/>
+                                </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cAu-fK-gwj">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cAu-fK-gwj">
                                 <rect key="frame" x="11" y="579" width="50" height="50"/>
                                 <color key="backgroundColor" red="0.91372555494308472" green="0.59607845544815063" blue="0.87843143939971924" alpha="1" colorSpace="deviceRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="LVs-xs-YUs"/>
+                                    <constraint firstAttribute="width" constant="50" id="qmY-zA-fFq"/>
+                                </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Riw-NS-2bJ">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="W9Y-jZ-pIm">
+                                <rect key="frame" x="112" y="259" width="150" height="150"/>
+                                <color key="backgroundColor" red="0.27450981736183167" green="0.14117647707462311" blue="0.98431378602981567" alpha="1" colorSpace="deviceRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="c6A-8t-Jq8"/>
+                                    <constraint firstAttribute="width" constant="150" id="f59-Qe-DcO"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Riw-NS-2bJ">
                                 <rect key="frame" x="309" y="579" width="50" height="50"/>
                                 <color key="backgroundColor" red="0.90588241815567017" green="0.96078437566757202" blue="0.21568629145622253" alpha="1" colorSpace="deviceRGB"/>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="W9Y-jZ-pIm">
-                                <rect key="frame" x="67" y="250" width="240" height="167"/>
-                                <color key="backgroundColor" red="0.27450981736183167" green="0.14117647707462311" blue="0.98431378602981567" alpha="1" colorSpace="deviceRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="0Iz-aY-GaF"/>
+                                    <constraint firstAttribute="width" constant="50" id="VXN-td-9KS"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.88235300779342651" green="0.96862751245498657" blue="0.90980398654937744" alpha="1" colorSpace="deviceRGB"/>
+                        <constraints>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="cAu-fK-gwj" secondAttribute="bottom" constant="38" id="0Wy-Ll-dji"/>
+                            <constraint firstItem="zR3-dG-EfV" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="8" id="12i-f5-HQG"/>
+                            <constraint firstAttribute="centerX" secondItem="W9Y-jZ-pIm" secondAttribute="centerX" constant="0.5" id="5md-UL-qyC"/>
+                            <constraint firstItem="zR3-dG-EfV" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="Nz3-i5-o4u"/>
+                            <constraint firstItem="t69-KF-a8p" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="Q8O-e4-SbE"/>
+                            <constraint firstItem="cAu-fK-gwj" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-5" id="XGB-pc-huH"/>
+                            <constraint firstItem="t69-KF-a8p" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="8" id="YJr-Ks-vEy"/>
+                            <constraint firstItem="Riw-NS-2bJ" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="cxL-Uf-OMf"/>
+                            <constraint firstAttribute="centerY" secondItem="W9Y-jZ-pIm" secondAttribute="centerY" constant="-0.5" id="doq-fu-m2q"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="Riw-NS-2bJ" secondAttribute="bottom" constant="38" id="l6L-Qr-wro"/>
+                        </constraints>
                     </view>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
